<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    tools:context="supermercado.app.economico.fragments.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.40"
                android:src="@drawable/clie"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewPerfilNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_margin="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*****"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cliente"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimaryText"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.20"
                    android:text="@string/lista_carrito_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textViewCarritoCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.20"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.60">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabPerfilCarrito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_ventas_on"
                        />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.20"
                    android:text="@string/lista_deseos_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textViewDeseoCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.20"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.60">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabPerfilDeseo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_ventas_on"
                        />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/detalle_compras_label"
                android:textStyle="bold"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/producto_label"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/monto_total_label"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewPerfilCantidadProductos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"/>

                    <TextView
                        android:id="@+id/textViewPerfilMontoProductos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryText"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>